# gamechanger-automation

./: .env.example  LICENSE  README.md  app.py  data-formatter.xlsx  inputs.csv  pyproject.toml
